Add Swagger doc for POST /authenticate
